<resources>
    <string name="app_name">MyPreference</string>
    <string name="setting_action_menu">Setting</string>


    <string name="pref_source_calorie_label">dailyCalorieSource</string>
    <string name="pref_source_calorie_key" translatable="false">dailyCalorieSource</string>
    <string name="pref_source_exercise_label">exerciseSource</string>
    <string name="pref_source_exercise_key" translatable="false">exerciseSource</string>

    <string name="pref_notification_key" translatable="false">notification</string>

    <string name="pref_steplength_key" translatable="false">stepLength</string>
    <string name="pref_steplength_value" translatable="false">70</string>

</resources>
